# cosmic-void-viewer

./: .gitignore  CMakeLists.txt  dataLoader.h  main.cpp  ospray_volume.h  read_data.py  testMain.cpp
utils/: ArcballCamera.cpp  ArcballCamera.h  CMakeLists.txt  callbacks.cpp  callbacks.h  embedded_colormaps.h  parseArgs.cpp  parseArgs.h  properties.cpp  properties.h  transfer_function_widget.cpp  transfer_function_widget.h  widget.cpp  widget.h
